--- a/hello.html
+++ b/hello.html
@@ -4,5 +4,7 @@
   <title>Hello!</title>
 
 </head>
-<body>Hello, GITHUB</body>
+<body>
+  <h1>Welcome to my Website!</h1>
+  Hello, GITHUB</body>
 </html>
